--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Liste des posts</title>
+    <title>{{ title }}</title>
 </head>
 <body>
     <h1>Liste des posts</h1>
@@ -13,12 +14,16 @@
             {% for post in posts %}
                 <li>
                     <h2>{{ post.title }}</h2>
+                    <img src="{{ post.imageUrl}}" alt="Image">
                     <p>{{ post.content }}</p>
-                    <p>Auteur : {{ post.author }}</p>
-                    <p>Date de publication : {{ post.published_at|date("d/m/Y") }}</p>
+                    <p>Auteur : {{ post.authorId}}</p>
+                    <p>Date de publication: {{ post.createdAt}}</p>
+                    <p>Date de mise à jour: {{ post.updatedAt}}</p>
                 </li>
             {% endfor %}
         </ul>
     {% endif %}
+    
 </body>
 </html>
+
