adding of namespace for all files and edithing of composer and routes.json files to autoload classes

--- a/app/views/blog/home.html.twig
+++ b/app/views/blog/home.html.twig
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{ title }}</title>
+    {{ cssLink|raw }}
+    {{ jsLink|raw }}
+    {{ bootstrapLink|raw }}
 </head>
 <body>
-    <h1>{{ content }}</h1>
+
 </body>
 </html>
