--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -13,12 +13,6 @@
         <link href="public/css/styles.css" rel="stylesheet" />
     <title>{{ title }}</title>
 </head>
-        <!-- Responsive navbar-->
-           {# <pre>
-        cssLink: {{ cssLink|default('N/A') }}
-        jsLink: {{ jsLink|default('N/A') }}
-        bootstrapLink: {{ bootstrapLink|default('N/A') }}
-    </pre> #}
  <body>
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -39,7 +33,7 @@
         <header class="py-5 bg-light border-bottom mb-4">
             <div class="container">
                 <div class="text-center my-5">
-                    <h1 class="fw-bolder">Bienvenue sur mon Blog!</h1>
+                    <h1 class="fw-bolder">Liste d'articles</h1>
                     <p class="lead mb-0">Nous vous informons sur tous nos activités</p>
                 </div>
             </div>
