implamentation of error exceptions systeme

--- a/app/views/blog/home.html.twig
+++ b/app/views/blog/home.html.twig
@@ -24,7 +24,7 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">A propos</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Articles</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://localhost/mon-blog/posts">Articles</a></li>
                     </ul>
                 </div>
             </div>
@@ -143,7 +143,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="public/js/scripts.js"></script>
     </body>
     
     <h1>Liste des posts</h1>
