--- a/app/views/templates/404.html.twig
+++ b/app/views/templates/404.html.twig
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 Not Found</title>
+    <title>Error Page</title>
 </head>
 <body>
-    <h1>Page non trouvée</h1>
+    <h1>Bing Error</h1>
+    <div class="card">
+    <a href="" class="nav-link">Error Page</a>
+    </div>
+    <p>{{ errorMessage }}</p>
 </body>
-</html
+</html>
