--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -3,16 +3,15 @@
 <html>
 <head>
     <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Blog Home</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="public/assets/favicon.ico" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="public/css/styles.css" rel="stylesheet" />
-    <title>{{ title }}</title>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>{{ post.title }}</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="public/assets/favicon.ico" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="public/css/styles.css" rel="stylesheet" />
+</head> 
  <body>
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,126 +20,83 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="http://localhost/mon-blog">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">A propos</a></li>
+                         <li class="nav-item"><a class="nav-link" href="http://localhost/mon-blog/posts">Articles</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Articles</a></li>
                     </ul>
+
                 </div>
             </div>
         </nav>
         <!-- Page header with logo and tagline-->
         <header class="py-5 bg-light border-bottom mb-4">
             <div class="container">
-             <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
                 <div class="text-center my-5">
-                    <h1 class="fw-bolder">Liste des articles</h1>
+                    <title>{{ post.title }}</title>
                     <p class="lead mb-0">Nous vous informons sur tous nos activités</p>
                 </div>
             </div>
         </header>
         <!-- Page content-->
+        {% if posts is empty %}
+        {# {% if category is empty %} #}
+            <p>Aucun post disponible.</p>
+        {% else %}
+        <!-- Blog post-->
+        {% for post in posts %}
         <div class="container">
-        
             <div class="row">
                 <!-- Blog entries-->
-                <div class="col-lg-8">
-                    <!-- Featured blog post-->
-                    <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                        <div class="card-body">
-                            <div class="small text-muted">January 1, 2023</div>
-                            <h2 class="card-title">Featured Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
-                        </div>
+                <!-- Featured blog post-->
+                <h1>{{ post.title }}</h1>
+                {# <div class="card mb-4 p-0">
+                    <a href="http://localhost/mon-blog/posts"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                    <div class="card-body">
+                        <div class="small text-muted">January 1, 2023</div>
+                        <h2 class="card-title">Featured Post Title</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+                        <a class="btn btn-primary" href="http://localhost/mon-blog/posts">Read more →</a>
                     </div>
+                </div> #}
+                <div class="col-lg-8">
+
                     <!-- Nested row for non-featured blog posts-->
-                    <div class="row">
-                        <div class="col-lg-6">
-                         {% if posts is empty %}
-                            {# {% if category is empty %} #}
-                                <p>Aucun post disponible.</p>
-                            {% else %}
-                            <!-- Blog post-->
-                            <div class="card mb-4">
-                                {% for post in posts %}
-                                <a href="#!">
+                    {# <div class="container-fluid">
+                         #}
+                    <div class="container-fluid  p-0">
+                        <div class="card mb-4 p-0">
+                            <a href="#!">
                                 {# <img src="{{ post.imageUrl}}" alt="Image"> #}
                                 <img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                                 <div class="card-body">
                                     <div class="small text-muted">Date de publication: {{ post.createdAt}}</div>
                                     <div class="small text-muted">Date de mise à jour: {{ post.updatedAt}}</div>
-                                    <h2 class="card-title h4">{{ post.title }}</h2>
                                     <p class="card-text">{{ post.content }}</p>
                                     <p>Auteur : {{ post.authorId}}</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
                                 </div>
-                                      {% endfor %}
-                                {% endif %}
-                            </div>
+                            </a>
                         </div>
+                    </div>
+                        {% endfor %}
+                        {% endif %}
                     
-                    </div>
-                    <!-- Pagination-->
-                    <nav aria-label="Pagination">
-                        <hr class="my-0" />
-                        <ul class="pagination justify-content-center my-4">
-                            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-                            <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                            <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <!-- Side widgets-->
-                <div class="col-lg-4">
-                    <!-- Search widget-->
-                    <div class="card mb-4">
-                        <div class="card-header">Search</div>
-                        <div class="card-body">
-                            <div class="input-group">
-                                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                                <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Categories widget-->
-                    <div class="card mb-4">
-                        <div class="card-header">Categories</div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <ul class="list-unstyled mb-0">
-                                        <li><a href="#!">Web Design</a></li>
-                                        <li><a href="#!">HTML</a></li>
-                                        <li><a href="#!">Freebies</a></li>
-                                    </ul>
-                                </div>
-                                <div class="col-sm-6">
-                                    <ul class="list-unstyled mb-0">
-                                        <li><a href="#!">JavaScript</a></li>
-                                        <li><a href="#!">CSS</a></li>
-                                        <li><a href="#!">Tutorials</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Side widget-->
-                    <div class="card mb-4">
-                        <div class="card-header">Side Widget</div>
-                        <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
-                    </div>
+                    {# </div> #}
                 </div>
             </div>
         </div>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; dmdprod 2023</p></div>
+            <div class="container text-center">
+                <p class="m-0 text-center text-white">
+                    Copyright &copy; dmdprod 2023
+                </p>
+                <div>
+                    <a class="m-0 text-center text-white" href="#">Politique De Confidentialité</a>
+                    <a class="m-0 text-center text-white">|</a>
+                    <a class="m-0 text-center text-white" href="#">Terms &amp; Conditions D'utilisation</a>
+                </div>
+            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
