--- a/app/views/blog/posts.html.twig
+++ b/app/views/blog/posts.html.twig
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Mon Blog</title>
+    <title>Liste des articles</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="public/assets/favicon.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="public/css/styles.css" rel="stylesheet" />
-    <title>{{ title }}</title>
 </head>
  <body>
         <!-- Responsive navbar-->
@@ -21,9 +20,9 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="http://localhost/mon-blog/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">A propos</a></li>
-                         <li class="nav-item"><a class="nav-link" href="http://localhost/mon-blog/posts">Article</a></li>
+                         <li class="nav-item"><a class="nav-link" href="http://localhost/mon-blog/posts">Articles</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                     </ul>
 
@@ -34,80 +33,52 @@
         <header class="py-5 bg-light border-bottom mb-4">
             <div class="container">
                 <div class="text-center my-5">
-                    <h1 class="fw-bolder">Bienvenue sur mon Blog!</h1>
+                    <h1 class="fw-bolder">Liste des articles</h1>
                     <p class="lead mb-0">Nous vous informons sur tous nos activités</p>
                 </div>
             </div>
         </header>
         <!-- Page content-->
         <div class="container">
-            <div class="row">
+            {# <div class=""> #}
                 <!-- Blog entries-->
                 <!-- Featured blog post-->
                 <h1 class="">A la une ! </h1>
-                {% if posts is empty %}
-                {# {% if category is empty %} #}
-                    <p>Aucun post disponible.</p>
-                {% else %}
-                
-                <!-- Blog post-->
-                <div class="card mb-4 p-0">
+
+                {# <div class="card mb-4 p-0">
                     <a href="http://localhost/mon-blog/posts"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
                     <div class="card-body">
-                        <div class="small text-muted">Date de publication: {{ post.createdAt}}</div>
-                        <div class="small text-muted">Date de mise à jour: {{ post.updatedAt}}</div>
-                            <h2 class="card-title h4">{{ post.title }}</h2>
-                            <p class="card-text">{{ post.content }}</p>
-                            <p>Auteur : {{ post.authorId}}</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
+                        <div class="small text-muted">January 1, 2023</div>
+                        <h2 class="card-title">Featured Post Title</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+                        <a class="btn btn-primary" href="http://localhost/mon-blog/posts">Read more →</a>
                     </div>
-                </div>
-                <h2 class="">Explorer nos derniers articles :</h2>
-                <div class="col-lg-8">
+                </div> #}
+                <div class="row">
 
                     <!-- Nested row for non-featured blog posts-->
                     {# <div class="container-fluid">
                          #}
-                       
+                        {% if posts is empty %}
+                            {# {% if category is empty %} #}
+                                <p>Aucun post disponible.</p>
+                            {% else %}
                             <!-- Blog post-->
-                            {% for post in posts %}
-                                <div class="container-fluid  p-0">
-                                    <div class="card mb-4 p-0">
-                                        <a href="#!">
-                                            {# <img src="{{ post.imageUrl}}" alt="Image"> #}
-                                            <img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                                            <div class="card-body">
-                                                <div class="small text-muted">Date de publication: {{ post.createdAt}}</div>
-                                                <div class="small text-muted">Date de mise à jour: {{ post.updatedAt}}</div>
-                                                <h2 class="card-title h4">{{ post.title }}</h2>
-                                                <p class="card-text">{{ post.content }}</p>
-                                                <p>Auteur : {{ post.authorId}}</p>
-                                                <p>id : {{ post.id}}</p>
-                                                <a class="btn btn-primary" href="http://localhost/mon-blog/post/{{ post.id}}">Lire →</a>
-                                                {# <a href="{{ path('post_show', {'id': post.id}) }}">Read more →</a> #}
-                                            </div>
-                                        </a>
-                                    </div>
+                        <div class="card mb-4 col-lg-8 p-0">
+                            <a href="#!">
+                                {# <img src="{{ post.imageUrl}}" alt="Image"> #}
+                                <img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                                <div class="card-body">
+                                    <div class="small text-muted">Date de publication: {{ post.createdAt}}</div>
+                                    <div class="small text-muted">Date de mise à jour: {{ post.updatedAt}}</div>
+                                    <h2 class="card-title h4">{{ post.title }}</h2>
+                                    <p class="card-text">{{ post.content }}</p>
+                                    <p>Auteur : {{ post.authorId}}</p>
+                                    <a class="btn btn-primary" href="#!">Read more →</a>
                                 </div>
-                            {% endfor %}
-                        {% endif %}
-                    
-                    {# </div> #}
-                    <!-- Pagination-->
-                    <nav aria-label="Pagination">
-                        <hr class="my-0" />
-                        <ul class="pagination justify-content-center my-4">
-                            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-                            <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                            <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <!-- Side widgets-->
+                            </a>
+                        </div>
+                          <!-- Side widgets-->
                 <div class="col-lg-4">
                     <!-- Search widget-->
                     <div class="card mb-4">
@@ -147,7 +118,47 @@
                         <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
                     </div>
                 </div>
-            </div>
+                        
+                </div>
+              
+                <h2 class="">Explorer nos derniers articles :</h2>
+                <div class="row col-lg-12 m-0 p-0">
+                    {% for post in posts %}
+                        <div class="card m-2 col-lg-3 p-0">
+                            <a href="#!">
+                                {# <img src="{{ post.imageUrl}}" alt="Image"> #}
+                                <img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                                <div class="card-body">
+                                    <div class="small text-muted">Date de publication: {{ post.createdAt}}</div>
+                                    <div class="small text-muted">Date de mise à jour: {{ post.updatedAt}}</div>
+                                    <h2 class="card-title h4">{{ post.title }}</h2>
+                                    <p class="card-text">{{ post.content }}</p>
+                                    <p>Auteur : {{ post.authorId}}</p>
+                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                </div>
+                            </a>
+                        </div>
+                    {% endfor %}
+                </div>
+                        {% endif %}
+                    
+                    {# </div> #}
+                    <!-- Pagination-->
+                    <nav aria-label="Pagination">
+                        <hr class="my-0" />
+                        <ul class="pagination justify-content-center my-4">
+                            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
+                            <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#!">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#!">3</a></li>
+                            <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
+                            <li class="page-item"><a class="page-link" href="#!">15</a></li>
+                            <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+                        </ul>
+                    </nav>
+                {# </div> #}
+               
+            {# </div> #}
         </div>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
