--- a/app/views/errors/404.html.twig
+++ b/app/views/errors/404.html.twig
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>404 Error - SB Admin</title>
-        <link href="public/css/styles.css" rel="stylesheet" />
+         <title>Error 404 - Page Not Found</title>
+        <link href="/mon-blog/public/css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -18,9 +18,9 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-6">
                                 <div class="text-center mt-4">
-                                    <img class="mb-4 img-error" src="public/assets/error-404-monochrome.svg" />
-                                    <p class="lead">Oupss !! La page que vous souhaitez accéder n'existe pas.</p>
-                                    <a href="#">
+                                    <img class="mb-4 img-error" src="/mon-blog/public/assets/error-404-monochrome.svg" />
+                                    <p class="lead">Oupss !! La page que vous souhaitez accéder n'existe pas </p>
+                                    <a href="#" class="text-dark">
                                         <i class="fas fa-arrow-left me-1"></i>
                                         Retour
                                     </a>
@@ -30,35 +30,20 @@
                     </div>
                 </main>
             </div>
-            <div id="layoutError_footer">
-                <footer class="py-4 bg-light mt-auto">
-                    <div class="container-fluid px-4">
-                        <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; dmdprod 2023</div>
-                            <div>
-                                <a href="#">Privacy Policy</a>
-                                &middot;
-                                <a href="#">Terms &amp; Conditions</a>
-                            </div>
-                        </div>
-                    </div>
-                </footer>
-            </div>
         </div>
         <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">
-                Copyright &copy; dmdprod 2023
-            </p>
-            <div>
-            <a href="#">Privacy Policy</a>
-            &middot;
-            <a href="#">Terms &amp; Conditions</a>
-        </div>
-        </div>
-        
+            <div class="container text-center">
+                <p class="m-0 text-center text-white">
+                    Copyright &copy; dmdprod 2023
+                </p>
+                <div>
+                    <a class="m-0 text-center text-white" href="#">Politique De Confidentialité</a>
+                    <a class="m-0 text-center text-white">|</a>
+                    <a class="m-0 text-center text-white" href="#">Terms &amp; Conditions D'utilisation</a>
+                </div>
+            </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="public/js/scripts.js"></script>
+        <script src="/mon-blog/public/js/scripts.js"></script>
     </body>
 </html>
