--- a/app/views/errors/404.html.twig
+++ b/app/views/errors/404.html.twig
@@ -1,4 +1,32 @@
-<!DOCTYPE html>
+{% extends 'templates/layout.html.twig' %}
+
+{% block header %}
+{% endblock %}
+
+{% block content %}
+    <!-- Contenu spécifique de la page 404 -->
+    <div id="layoutError">
+        <div id="layoutError_content">
+            <main>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-6">
+                            <div class="text-center mt-4">
+                                <img class="mb-4 img-error" src="/mon-blog/public/assets/error-404-monochrome.svg" />
+                                <p class="lead">
+                                    Oupss !! La page que vous souhaitez accéder n'existe pas 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
+    </div>
+{% endblock %}
+
+
+{# <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -46,4 +74,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="/mon-blog/public/js/scripts.js"></script>
     </body>
-</html>
+</html> #}
+
