--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -1,36 +1,90 @@
 {% extends 'templates/layout.html.twig' %}
 
-{% block header %}
-    <header class="py-5 bg-light border-bottom mb-4">
-        <div class="container">
-            <div class="text-center my-5">
-                <h1>{{ post.title }}</h1>
-                <p class="lead mb-0">Nous vous informons sur tous nos activités</p>
-            </div>
-        </div>
-    </header>
+{% block head %}
+    <head>
+        <meta charset="utf-8" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>{{ title }}</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="../public/assets/favicon.ico" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="../public/css/styles.css" rel="stylesheet" />
+    </head>
+{% endblock %}
+
+{% block header_title %}
+   {{ post.title }}
+{% endblock %}
+
+{% block header_description %}
+    {# Découvrez nos derniers articles et restez informé de nos activités. #}
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-lg-8">
-            {% if post %}
-                <div class="card mb-4 p-0">
-                    <a href="#!">
-                        <img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." />
-                    </a>
-                    <div class="card-body">
-                        <div class="small text-muted">Date de publication: {{ post.createdAt }}</div>
-                        <div class="small text-muted">Date de mise à jour: {{ post.updatedAt }}</div>
-                        <p class="card-text">{{ post.content }}</p>
-                        <p>Auteur : {{ post.authorId }}</p>
+    <div class="container-fluid p-0">
+    <img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." />
+        {# <div class=""> #}
+            <div class="container mt-5">
+                {% if post %}
+                    <div class="mb-4">
+                        <h3 class="card-title"> {{ post.title }}</h3>
+                        <div class="card-body">
+                            <p class="card-text">{{ post.content }}</p>
+                            <div class="small text-muted">Date de publication: {{ post.createdAt }}</div>
+                            <div class="small text-muted">Date de mise à jour: {{ post.updatedAt }}</div>
+                            <br>
+                            <blockquote class="blockquote mb-0">
+                                <footer class="blockquote-footer">Auteur :
+                                    <cite title="Source Title">{{ post.authorId }}</cite>
+                                </footer>
+                            </blockquote>
+                        </div>
+                        <div class="list-group">
+                        <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+                            <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">List group item heading</h5>
+                            <small>3 days ago</small>
+                            </div>
+                            <p class="mb-1">Some placeholder content in a paragraph.</p>
+                            <small>And some small print.</small>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action">
+                                <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">List group item heading</h5>
+                                <small class="text-body-secondary">3 days ago</small>
+                                </div>
+                                <p class="mb-1">Some placeholder content in a paragraph.</p>
+                                <small class="text-body-secondary">And some muted small print.</small>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action">
+                                <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">List group item heading</h5>
+                                <small class="text-body-secondary">3 days ago</small>
+                                </div>
+                                <p class="mb-1">Some placeholder content in a paragraph.</p>
+                                <small class="text-body-secondary">And some muted small print.</small>
+                            </a>
+                        </div>
                     </div>
-                </div>
-            {% else %}
-                <p>L'article n'existe pas.</p>
-            {% endif %}
-        </div>
+                    <form class="">
+                        <div class="mb-3">
+                            <label for="validationTextarea" class="form-label">Commentaires</label>
+                            <textarea class="form-control" id="validationTextarea" placeholder="Laissez nous votre commentaire ici" required></textarea>
+                            <a class="btn btn-secondary mt-2">Envoyer</a>
+                        </div>
+                    </form>
+                {% else %}
+                    <p>L'article n'existe pas.</p>
+                {% endif %}
+            </div>
+        {# </div> #}
     </div>
-</div>
+    {% block JsLink %}
+        <!-- Core theme JS-->
+        <script src="../public/js/scripts.js"></script>
+    {% endblock %}
 {% endblock %}
+
+
+
