--- a/app/views/templates/layout.html.twig
+++ b/app/views/templates/layout.html.twig
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+{% block head %}
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -11,6 +12,7 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="public/css/styles.css" rel="stylesheet" />
 </head>
+{% endblock %}
 <body>
 
 		<!-- Responsive navbar-->
@@ -34,6 +36,9 @@
 										<li class="nav-item">
 												<a class="nav-link {% if page == 'contact' %}active{% endif %}" href="http://localhost/mon-blog/contact">Contact</a>
 										</li>
+										<li class="nav-item">
+												<a class="nav-link {% if page == 'login' %}active{% endif %}" href="http://localhost/mon-blog/login">login</a>
+										</li>
 								</ul>
 						</div>
 				</div>
@@ -41,7 +46,7 @@
 
     <!-- Page header with logo and tagline-->
     {% block header %}
-    <header class="py-5 bg-light border-bottom mb-4">
+    <header class="py-5 bg-light border-bottom">
         <div class="container">
             <div class="text-center my-5">
                 <h1 class="fw-bolder">{{ block('header_title') }}</h1>
@@ -55,22 +60,25 @@
     {% block content %}
     {% endblock %}
     
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-        <div class="container text-center">
-            <p class="m-0 text-center text-white">
-                Copyright &copy; dmdprod 2023
-            </p>
-            <div>
-                <a class="m-0 text-center text-white" href="#">Politique De Confidentialité</a>
-                <a class="m-0 text-center text-white">|</a>
-                <a class="m-0 text-center text-white" href="#">Terms &amp; Conditions D'utilisation</a>
+        <!-- Footer -->
+        <footer class="py-5 bg-dark">
+            <div class="container text-center">
+                <p class="m-0 text-center text-white">
+                    Copyright &copy; dmdprod 2023
+                </p>
+                <div>
+                    <a class="m-0 text-center text-white" href="#">Politique De Confidentialité</a>
+                    <a class="m-0 text-center text-white">|</a>
+                    <a class="m-0 text-center text-white" href="#">Terms &amp; Conditions D'utilisation</a>
+                </div>
             </div>
-        </div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="public/js/scripts.js"></script>
+        </footer>
+        {% block JsLink %}
+            <!-- Bootstrap core JS-->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+            <!-- Core theme JS-->
+            <script src="public/js/scripts.js"></script>
+        {% endblock %}
+
 </body>
 </html>
