--- a/app/views/blog/home.html.twig
+++ b/app/views/blog/home.html.twig
@@ -32,7 +32,7 @@
                     <p class="card-text">{{ latestPost.content }}</p>
                     <p>Auteur : {{ latestPost.authorId }}</p>
                     <p>id : {{ latestPost.id }}</p>
-                    <a class="btn btn-primary" href="http://localhost/mon-blog/post/{{ latestPost.id }}-{{ latestPost.title }}">Lire →</a>
+                    <a class="btn btn-primary" href="http://localhost/mon-blog/post/{{ latestPost.id }}">Lire →</a>
                 </div>
             </div>
         {% endif %}
@@ -53,7 +53,7 @@
                             <p class="card-text">{{ post.content }}</p>
                             <p>Auteur : {{ post.authorId }}</p>
                             <p>id : {{ post.id }}</p>
-                            <a class="btn btn-primary" href="http://localhost/mon-blog/post/{{ post.id }}{{ post.title }}">Lire →</a>
+                            <a class="btn btn-primary" href="http://localhost/mon-blog/post/{{ post.id }}">Lire →</a>
                         </div>
                     </div>
                 </div>
