--- a/app/views/user/login.html.twig
+++ b/app/views/user/login.html.twig
@@ -18,7 +18,10 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Connexion</h3></div>
+                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Se connecter</h3></div>
+                                        {% if error is defined %}
+                                            <p>{{ error }}</p>
+                                        {% endif %}
                                     <div class="card-body">
                                         <form class="needs-validation" novalidate action="login" method="POST">
                                             <div class="form-floating mb-3">
